--- a/src/app/trip-details/trip-details.page.html
+++ b/src/app/trip-details/trip-details.page.html
@@ -37,11 +37,21 @@
 				<div class="basis-1/3">Conductor</div>
 				<div class="basis-2/3">{{ trip.driver.passenger.name.value }}</div>
 			</div>
-			<div class="flex">
+			<div class="flex items-center">
+				<mat-icon
+					aria-hidden="false"
+					class="text-red-500 fill-current"
+					aria-label="icon"
+					fontIcon="location_on"></mat-icon>
 				<div class="basis-1/3">Direccion Inicio</div>
 				<div class="basis-2/3">{{trip.startLocation.name.value | parseLocationName}}</div>
 			</div>
-			<div class="flex">
+			<div class="flex items-center">
+				<mat-icon
+					aria-hidden="false"
+					class="text-yellow-500 fill-current"
+					aria-label="icon"
+					fontIcon="location_on"></mat-icon>
 				<div class="basis-1/3">Direccion Fin</div>
 				<div class="basis-2/3">{{trip.endLocation.name.value | parseLocationName}}</div>
 			</div>
@@ -122,7 +132,7 @@
 				</button>
 				<mat-menu #menuPsn="matMenu">
 					<button mat-menu-item
-					(click)="onReportPassenger(psn)">
+						(click)="onReportPassenger(psn)">
 						<mat-icon class="">warning</mat-icon>
 						<span class="text-red-600">Reportar</span>
 					</button>
