fix(near-trip):modify near trip

--- a/src/app/tabs/trip-history/trip-history.page.html
+++ b/src/app/tabs/trip-history/trip-history.page.html
@@ -11,17 +11,33 @@
 		</ion-toolbar>
 	</ion-header>
 	<div class="p-2.5 w-full mx-auto flex flex-col gap-4">
+
 		<div class="font-gotham text-xl">En Curso</div>
-		<div *ngFor="let card of progressTrips">
-			<app-drive-card [info]="card"></app-drive-card>
-		</div>
+		<ng-container *ngIf="progressTrips.length > 0">
+			<div *ngFor="let card of progressTrips">
+				<app-drive-card [info]="card"></app-drive-card>
+			</div>
+		</ng-container>
+		<ng-container *ngIf="progressTrips.length === 0">
+			<div>No hay viajes en curso</div>
+		</ng-container>
 		<div class="font-gotham text-xl">Esperando aprobacion</div>
-		<div *ngFor="let card of openTrips">
-			<app-drive-card [info]="card"></app-drive-card>
-		</div>
+		<ng-container *ngIf="openTrips.length > 0">
+			<div *ngFor="let card of openTrips">
+				<app-drive-card [info]="card"></app-drive-card>
+			</div>
+		</ng-container>
+		<ng-container *ngIf="openTrips.length > 0">
+			<div>No hay viajes pendientes de aprobacion</div>
+		</ng-container>
 		<div class="font-gotham text-xl">Completados</div>
-		<div *ngFor="let card of completedTrips">
-			<app-drive-card [info]="card"></app-drive-card>
-		</div>
+		<ng-container *ngIf="completedTrips.length > 0">
+			<div *ngFor="let card of completedTrips">
+				<app-drive-card [info]="card"></app-drive-card>
+			</div>
+		</ng-container>
+		<ng-container *ngIf="completedTrips.length > 0">
+			<div>No has completado ningun viaje aun</div>
+		</ng-container>
 	</div>
 </ion-content>
