--- a/src/app/tabs/search/search.page.html
+++ b/src/app/tabs/search/search.page.html
@@ -1,7 +1,10 @@
 <ion-header [translucent]="true">
 	<ion-toolbar>
 		<div class="flex flex-col pt-4 px-4">
-			<app-search-input></app-search-input>
+			<app-search-launcher
+				[value]="locationText"
+				(onStreetPosition)="onStreetPosition($event)"
+			></app-search-launcher>
 		</div>
 	</ion-toolbar>
 </ion-header>
