fix(register-driver):modify file input to upload image in registerdriver

--- a/src/app/shared/components/file-input/file-input.component.html
+++ b/src/app/shared/components/file-input/file-input.component.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="font-gotham text-base">{{ label }}</div>
-	<a (click)="presentActionSheet()"
+	<a (click)="loadFile()"
 		class="mb-3">
 		<div class="px-3 py-1 focus:z-[3] focus:text-neutral-700 focus:outline-none focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] rounded-br-md rounded-tr-md border rounded-bl-md rounded-tl-md border-solid border-neutral-300 focus:border-primary relative flex w-full flex-wrap items-center justify-center">
 			<input
