fix(refactor): apply cleanup & refactor code

--- a/src/app/tabs/profile/profile.page.html
+++ b/src/app/tabs/profile/profile.page.html
@@ -6,7 +6,8 @@
 			<mat-icon
 				(click)="onLogout()"
 				fontIcon='logout'></mat-icon>
-			<ion-icon class="w-6 h-6" (click)="editClick()"
+			<ion-icon class="w-6 h-6"
+				(click)="editClick()"
 				name="create-outline"></ion-icon>
 		</div>
 	</app-app-bar-clone>
